--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,5 +26,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://splitmate-zqda.onrender.com"
 }
